writing-a-c-compiler-tests/tests/chapter_9/invalid_declarations/params_with_same_name.c
 
int foo(int a, int a) {
    return a;
}

int main(void) {
    return foo(1, 2);
}